Includes/MvCameraControl.h

/********************************************************************//**
 *  @~chinese
 *  @brief  注册图像数据回调
 *  @param  handle                      [IN]            设备句柄
 *  @param  cbOutput                    [IN]            回调函数指针
 *  @param  pUser                       [IN]            用户自定义变量
 *  @return 成功，返回MV_OK；错误，返回错误码
 *  @remarks 通过该接口可以设置图像数据回调函数，在MV_CC_CreateHandle之后即可调用, 图像数据采集有两种方式，两种方式不能复用：
             方式一：调用MV_CC_RegisterImageCallBackEx设置图像数据回调函数，然后调用MV_CC_StartGrabbing开始采集，采集的图像数据在设置的回调函数中返回
             方式二：调用MV_CC_StartGrabbing开始采集，然后在应用层循环调用MV_CC_GetOneFrameTimeout获取指定像素格式的帧数据，
             获取帧数据时上层应用程序需要根据帧率控制好调用该接口的频率。
             该接口不支持MV_CAMERALINK_DEVICE 类型的设备。
 
 *  @~english
 *  @brief  Register the image callback function
 *  @param  handle                      [IN]            Device handle
 *  @param  cbOutput                    [IN]            Callback function pointer
 *  @param  pUser                       [IN]            User defined variable
 *  @return Success, return MV_OK. Failure, return error code
 *  @remarks After MV_CC_CreateHandle, call this interface to set image data callback function.There are two available image data acquisition modes, and cannot be used together:
             Mode 1: Call MV_CC_RegisterImageCallBack to set image data callback function, and then callMV_CC_StartGrabbing to start acquiring. The acquired image data will return in the set callback function.
             Mode 2: Call MV_CC_StartGrabbing to start acquiring, and then call MV_CC_GetOneFrameTimeout repeatedly in application layer to get frame data of specified pixel format. When getting frame data,
             the frequency of calling this interface should be controlled by upper layer application according to frame rate.
             This interface does not support devices of type MV_CAMERALINK_DEVICE
 ***********************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_RegisterImageCallBackEx(IN void* handle, 
                                                         IN void(__stdcall* cbOutput)(unsigned char * pData, MV_FRAME_OUT_INFO_EX* pFrameInfo, void* pUser), IN void* pUser);
/********************************************************************//**
 *  @~chinese
 *  @brief  使用内部缓存获取一帧图片（与MV_CC_Display不能同时使用）
 *  @param  handle                      [IN]            设备句柄
 *  @param  pstFrame                    [IN][OUT]       图像数据和图像信息
 *  @param  nMsec                       [IN]            等待超时时间，输入INFINITE时表示无限等待，直到收到一帧数据或者停止取流
 *  @return 成功，返回MV_OK；错误，返回错误码
 *  @remarks 调用该接口获取图像数据帧之前需要先调用MV_CC_StartGrabbing启动图像采集。该接口为主动式获取帧数据，上层应用程序需要根据帧率，控制好调用该接口的频率,
             该接口支持设置超时时间，SDK内部等待直到有数据时返回，可以增加取流平稳性，适合用于对平稳性要求较高的场合。
             该接口与MV_CC_FreeImageBuffer配套使用，当处理完取到的数据后，需要用MV_CC_FreeImageBuffer接口将pFrame内的数据指针权限进行释放。
             该接口与MV_CC_GetOneFrameTimeout相比，有着更高的效率。且其取流缓存的分配是由sdk内部自动分配的，而MV_CC_GetOneFrameTimeout接口是需要客户自行分配。
             该接口在调用MV_CC_Display后无法取流。
             该接口对于U3V、GIGE设备均可支持。
             该接口不支持CameraLink设备。
 
 *  @~english
 *  @brief  Get a frame of an image using an internal cache
 *  @param  handle                      [IN]            Device handle
 *  @param  pstFrame                    [IN][OUT]       Image data and image information
 *  @param  nMsec                       [IN]            Waiting timeout
 *  @return Success, return MV_OK. Failure, return error code
 *  @remarks Before calling this API to get image data frame, you should call MV_CC_StartGrabbing to start image acquisition.
             This API can get frame data actively, the upper layer program should control the frequency of calling this API according to the frame rate. This API support setting timeout, and SDK will wait to return until data appears. This function will increase the streaming stability, which can be used in the situation with high stability requirement. 
             This API and MV_CC_FreeImageBuffer should be called in pairs, after processing the acquired data, you should call MV_CC_FreeImageBuffer to release the data pointer permission of pFrame. 
             This interface is more efficient than MV_CC_GetOneFrameTimeout. The allocation of the stream cache is automatically allocated within the SDK.The MV_CC_GetOneFrameTimeout interface needs to be allocated by customers themselves. 
             This API cannot be called to stream after calling MV_CC_Display.
             This API is not supported by CameraLink device. 
             This API is supported by both USB3 vision camera and GigE camera. 
 *****************************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_GetImageBuffer(IN void* handle, IN OUT MV_FRAME_OUT* pstFrame, IN unsigned int nMsec);
/********************************************************************//**
 *  @~chinese
 *  @brief  释放图像缓存(此接口用于释放不再使用的图像缓存，与MV_CC_GetImageBuffer配套使用)
 *  @param  handle                      [IN]            设备句柄
 *  @param  pstFrame                    [IN]            图像数据和图像数据
 *  @return 成功，返回MV_OK；错误，返回错误码
 *  @remarks 该接口与MV_CC_GetImageBuffer配套使用，使用MV_CC_GetImageBuffer接口取到的图像数据pFrame，需要用MV_CC_FreeImageBuffer接口进行权限释放
             该接口取流效率高于GetOneFrameTimeout接口
			 当GetImageBuffer不进行FreeImageBuffer时，最大输出图像个数为当前配置下SDK的缓存节点个数(用户可以调用SetImageNode接口，调节SDK的缓存个数）
             该接口对于U3V、GIGE设备均可支持
             该接口不支持CameraLink设备。
 
 *  @~english
 *  @brief  Free image buffer(this interface can free image buffer, used with MV_CC_GetImageBuffer)
 *  @param  handle                      [IN]            Device handle
 *  @param  pstFrame                    [IN]            Image data and image information
 *  @return Success, return MV_OK. Failure, return error code
 *  @remarks MV_CC_FreeImageBuffer and MV_CC_GetImageBuffer API call in pairs, before calling MV_CC_GetImageBuffer to get image data pFrame, you should call MV_CC_FreeImageBuffer to release the permission.
             Compared with API MV_CC_GetOneFrameTimeout
             The API has higher efficiency of image acquisition. The max. number of nodes can be outputted is same as the "nNum" of  the current configuration of the SDK's cache (users can call the SetImageNode interface to adjust the SDK's cache count)
             The API is not supported by CameraLink device.
             The API is supported by both USB3 vision camera and GigE camera. 
 **********************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_FreeImageBuffer(IN void* handle, IN MV_FRAME_OUT* pstFrame);
/********************************************************************//**
 *  @~chinese
 *  @brief  设置SDK内部图像缓存节点个数，大于等于1，在抓图前调用
 *  @param  handle                      [IN]            设备句柄
 *  @param  nNum                        [IN]            缓存节点个数
 *  @return 成功，返回MV_OK；错误，返回错误码
 *  @remarks 调用该接口可以设置SDK内部图像缓存节点个数，在调用MV_CC_StartGrabbing开始抓图前调用。
             不同相机因为取流方式不同，不调用MV_CC_SetImageNodeNum接口情况下，默认不同相机默认缓存节点个数不同：比如 双U内部分配默认3个节点
             SDK实际分配的节点个数 = SDK内部预分配的个数 + 用户分配的节点(MV_CC_SetImageNodeNum);若系统内存资源不够,SDK内部会重新计算, 以重新计算的节点个数为准
             该接口不支持MV_CAMERALINK_DEVICE 类型的设备。
             该接口仅对SDK内部分配缓存模式有效，外部分配缓存模式（即调用MV_CC_RegisterBuffer）无效;
 
 *  @~english
 *  @brief  Set the number of the internal image cache nodes in SDK, Greater than or equal to 1, to be called before the capture
 *  @param  handle                      [IN]            Device handle
 *  @param  nNum                        [IN]            Image Node Number
 *  @return Success, return MV_OK. Failure, return error code
 *  @remarks Call this interface to set the number of SDK internal image buffer nodes. The interface should be called before calling MV_CC_StartGrabbing for capturing. 
			 Due to different stream retrieval methods, different cameras default to different cache nodes by default when not calling the MV_CC_SetImageNodeNum interface. For example, for dual U internal allocation, the default number of cache nodes is 3
             The actual number of nodes allocated by the SDK = the number of pre allocated nodes within the SDK + the number of nodes allocated by the user (MV_CC_SetImageNodeNum)
             If the system memory resources are insufficient, the SDK will recalculate and use it as the actual number of nodes.
             This interface does not support devices of type MV_CAMERALINK_DEVICE
             This interface is only valid for the SDK's internal allocation cache mode, and the external allocation cache mode (i.e., calling MV_CC_RegisterBuffer) is invalid;
 ***********************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_SetImageNodeNum(IN void* handle, IN unsigned int nNum);
/********************************************************************//**
 *  @~chinese
 *  @brief  重构图像(用于分时曝光功能)
 *  @param  handle                      [IN]            设备句柄
 *  @param  pstReconstructParam         [IN][OUT]       重构图像参数
 *  @return 成功，返回MV_OK，失败，返回错误码。
 *  @remarks 图像分割支持任意像素格式，图像分割应与线阵相机的“MultiLightControl”节点搭配使用，该节点可设置多个不同的曝光值，如MultiLightControl=2,
             相机会将两个不同曝光值所对应的两张图像交叠合并为一张图像(实际高度为两张图像的高度)发送给上层应用程序，
             调用该接口并传入分时曝光值nExposureNum为2，可将相机发送的一张图像分割为2张图像，这两张图像分别对应一个曝光值。
             若使用普通相机或未打开线阵相机的“MultiLightControl”节点，则图像分割无意义，只是将图像按行分割为2，3，4张图像，
             每张图像的高度变为原图像的1/2，1/3，1/4(由nExposureNum决定)。

 *  @~english
 *  @brief  Reconstruct Image(For time-division exposure function)
 *  @param  handle                      [IN]            Device handle
 *  @param  pstReconstructParam         [IN][OUT]       Reconstruct image parameters
 *  @return Success, return MV_OK, Failure, return error code.
 *  @remarks Image segmentation supports any pixel format. Image segmentation should be used with the "MultiLightControl" node of the linear array camera. This node can set multiple different exposure values, such as MultiLightControl=2, 
             The camera will overlap and merge two images corresponding to two different exposure values into one image (the actual height is the height of the two images) and send it to the upper application. 
             Call the interface and pass in nExposureNum is two. One image sent by the camera can be divided into two images, each of which corresponds to an exposure value. 
             If an ordinary camera is used or the "MultiLightControl" node of the linear array camera is not turned on, the image segmentation is meaningless, but the image is divided into 2, 3, and 4 images by line. 
             The height of each image becomes 1/2, 1/3, 1/4 of the original image (determined by nExposureNum).
 ************************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_ReconstructImage(IN void* handle, IN OUT MV_RECONSTRUCT_IMAGE_PARAM* pstReconstructParam);
/********************************************************************//**
*  @~chinese
*  @brief  分配对齐内存
*  @param  nBufLen                      [IN]            分配内存的长度
*  @param  nAlignment                   [IN]            内存对齐字节数 (必须是大于0，并且是2的整数次幂)
*  @return 成功，返回申请内存地址，失败，返回 NULL
*  @remarks 

*  @~english
*  @brief  
*  @param  nBufLen                      [IN]        memory bytes     
*  @param  nAlignment                   [IN]        memory aligned bytes (Must be an integer power of 2 greater than 0)
*  @return Success, return memory address, Failure, return NULL.
*  @remarks 
************************************************************************/
MV_CAMCTRL_API void *  __stdcall MV_CC_AllocAlignedBuffer(IN uint64_t  nBufSize, IN unsigned int nAlignment);
/********************************************************************//**
*  @~chinese
*  @brief  对齐内存释放
*  @param  pBuffer                      [IN]            内存地址
*  @return 成功，返回MV_OK，失败，返回错误码。
*  @remarks 对齐内存的释放，搭配MV_CC_AllocAlignedBuffer使用

*  @~english 
*  @brief   release aligned memory
*  @param  pBuffer                      [IN]        memory address
*  @return Success, return MV_OK, Failure, return error code.
*  @remarks
************************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_FreeAlignedBuffer(IN void* pBuffer);
/********************************************************************//**
*  @~chinese
*  @brief  获取设备palyload大小（payload包含图像数据和Chunk数据）和内存对其方式，用于SDK外部注册缓存时，应用层分配足够的缓存及正确的内存对齐方式
*  @param  handle                      [IN]            设备句柄
*  @param  pnPayloadSize               [IN OUT]        负载长度
*  @param  pnAlignment                 [IN OUT]        负载内存对齐的字节数
*  @return 成功，返回MV_OK，失败，返回错误码。
*  @remarks

*  @~english
*  @brief  Obtain the device payload size (payload includes image data and Chunk data) and memory alignment method, 
    which is used by the application layer to allocate sufficient cache and correct memory alignment when registering external cache for SDK
*  @param  handle                      [IN]            Device Handle
*  @param  pnPayloadSize               [IN OUT]        Payload size
*  @param  pnAlignment                 [IN OUT]        Alignment bytes
*  @return Success, return MV_OK, Failure, return error code.
*  @remarks
************************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_GetPayloadSize(IN void* handle, IN OUT uint64_t* pnPayloadSize, IN OUT unsigned int* pnAlignment);
/********************************************************************//**
*  @~chinese
*  @brief  应用程序分配缓存，并注册到SDK内部，供SDK使用
*  @param  handle                      [IN]            设备句柄
*  @param  pBuffer                     [IN]            内存地址
*  @param  nBufSize                    [IN]            内存长度
*  @param  pUser                       [IN]            用户指针 
*  @return 成功，返回MV_OK，失败，返回错误码。
*  @remarks 可以使用 MV_CC_GetPayloadSize 获取缓存大小，并使用 MV_CC_AllocAlignedBuffer 分配空间，之后进行MV_CC_RegisterBuffer注册
            注册的缓存需要由应用层通知SDK取消注册（MV_CC_UnRegisterBuffer）后，进行释放（MV_CC_FreeAlignedBuffer）
            使用该接口后，仅仅支持MV_CC_GetImageBuffer/MV_CC_FreeImageBuffer MV_CC_RegisterImageCallBackEx 获取图像，不支持其他接口获取图像
            使用该接口后，如果之前配置了SDK内部节点（MV_CC_SetImageNodeNum）无效
            双USB接口相机要求至少注册3块空间到SDK内部;其他相机暂无限制，但是为了避免缓存不足，请配置足够的缓存到底层
*  @~english
*  @brief  The application allocates memory and registers it within the SDK for use by the SDK
*  @param  handle                      [IN]            Device Handle
*  @param  pBuffer                     [IN]            external memory address
*  @param  nBufSize                    [IN]            external memory len 
*  @param  pUser                       [IN]            User Pointer
*  @return Success, return MV_OK, Failure, return error code.
*  @remarks Registering memory can be done by using MV_CC_GetPayloadSize to obtain the memory size, and allocating the memory size using MV_CC_AllocAlignedBuffer
            The registered memory needs to be notified by the application layer to the SDK to cancel the registration (MV_CC_UnregisterBuffer) and then released (MV_CC_FreeAlignedBuffer)
            After using this interface, only MV_CC_GetImageBuffer、MV_CC_FreeImageBuffer/MV_CC_RegisterImageCallBackEx is supported for image retrieval, and other interfaces are not supported for image retrieval
            After using this interface, if the SDK internal node (MV_CC_SetImageNodeNum) was previously configured, it is invalid
            The dual USB interface camera requires at least 3 spaces to be registered inside the SDK;There is no limit for other cameras for the time being, but to avoid insufficient cache, please configure sufficient cache into the SDK
************************************************************************/
MV_CAMCTRL_API int __stdcall MV_CC_RegisterBuffer(IN void* handle, IN void *pBuffer, IN uint64_t nBufSize, IN void* pUser);
/********************************************************************//**
*  @~chinese
*  @brief  外部内存取消SDK内部注册
*  @param  handle                      [IN]            设备句柄
*  @param  pBuffer                     [IN]            外部内存地址
*  @return 成功，返回MV_OK，失败，返回错误码。
*  @remarks 

*  @~english
*  @brief   revoke external memory
*  @param  handle                      [IN]            Device Handle
*  @param  pBuffer                     [IN]            external memory address
*  @return Success, return MV_OK, Failure, return error code.
*  @remarks
************************************************************************/
MV_CAMCTRL_API int __stdcall  MV_CC_UnRegisterBuffer(IN void* handle, IN void* pBuffer);