src/camera_control.rs


    /// 重构图像 (用于分时曝光功能)
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pstReconstructParam` - 重构图像参数（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 图像分割支持任意像素格式，图像分割应与线阵相机的"MultiLightControl"节点搭配使用，
    /// 该节点可设置多个不同的曝光值，如 MultiLightControl=2，
    /// 相机会将两个不同曝光值所对应的两张图像交叠合并为一张图像 (实际高度为两张图像的高度) 发送给上层应用程序，
    /// 调用该接口并传入分时曝光值 nExposureNum 为 2，可将相机发送的一张图像分割为 2 张图像，
    /// 这两张图像分别对应一个曝光值。
    ///
    /// 若使用普通相机或未打开线阵相机的"MultiLightControl"节点，则图像分割无意义，
    /// 只是将图像按行分割为 2，3，4 张图像，每张图像的高度变为原图像的 1/2，1/3，1/4(由 nExposureNum 决定)
    pub unsafe fn MV_CC_ReconstructImage(
        handle: *mut c_void,
        pstReconstructParam: *mut crate::MV_RECONSTRUCT_IMAGE_PARAM,
    ) -> c_int;

    /// 分配对齐内存
    ///
    /// # 参数
    /// * `nBufSize` - 分配内存的长度
    /// * `nAlignment` - 内存对齐字节数 (必须是大于 0，并且是 2 的整数次幂)
    ///
    /// # 返回值
    /// 成功返回申请内存地址，失败返回 NULL
    pub unsafe fn MV_CC_AllocAlignedBuffer(nBufSize: u64, nAlignment: c_uint) -> *mut c_void;

    /// 对齐内存释放
    ///
    /// # 参数
    /// * `pBuffer` - 内存地址
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 对齐内存的释放，搭配 MV_CC_AllocAlignedBuffer 使用
    pub unsafe fn MV_CC_FreeAlignedBuffer(pBuffer: *mut c_void) -> c_int;

    /// 获取设备 payload 大小（payload 包含图像数据和 Chunk 数据）和内存对其方式，
    /// 用于 SDK 外部注册缓存时，应用层分配足够的缓存及正确的内存对齐方式
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pnPayloadSize` - 负载长度（输出参数）
    /// * `pnAlignment` - 负载内存对齐的字节数（输出参数）
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_GetPayloadSize(
        handle: *mut c_void,
        pnPayloadSize: *mut u64,
        pnAlignment: *mut c_uint,
    ) -> c_int;

    /// 应用程序分配缓存，并注册到 SDK 内部，供 SDK 使用
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pBuffer` - 内存地址
    /// * `nBufSize` - 内存长度
    /// * `pUser` - 用户指针
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    ///
    /// # 注意事项
    /// 可以使用 MV_CC_GetPayloadSize 获取缓存大小，并使用 MV_CC_AllocAlignedBuffer 分配空间，
    /// 之后进行 MV_CC_RegisterBuffer 注册。
    ///
    /// 注册的缓存需要由应用层通知 SDK 取消注册（MV_CC_UnRegisterBuffer）后，
    /// 进行释放（MV_CC_FreeAlignedBuffer）。
    ///
    /// 使用该接口后，仅仅支持 MV_CC_GetImageBuffer/MV_CC_FreeImageBuffer/
    /// MV_CC_RegisterImageCallBackEx 获取图像，不支持其他接口获取图像。
    ///
    /// 使用该接口后，如果之前配置了 SDK 内部节点（MV_CC_SetImageNodeNum）无效。
    ///
    /// 双 USB 接口相机要求至少注册 3 块空间到 SDK 内部;
    /// 其他相机暂无限制，但是为了避免缓存不足，请配置足够的缓存到底层
    pub unsafe fn MV_CC_RegisterBuffer(
        handle: *mut c_void,
        pBuffer: *mut c_void,
        nBufSize: u64,
        pUser: *mut c_void,
    ) -> c_int;

    /// 外部内存取消 SDK 内部注册
    ///
    /// # 参数
    /// * `handle` - 设备句柄
    /// * `pBuffer` - 外部内存地址
    ///
    /// # 返回值
    /// 成功返回 MV_OK，失败返回错误码
    pub unsafe fn MV_CC_UnRegisterBuffer(handle: *mut c_void, pBuffer: *mut c_void) -> c_int;

} // unsafe extern "C"
